Use a common configuration for the compiler-plugin where deprecation warnings cause the build to fail